app-secure-ribun.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-secure
  labels:
    app: app-secure
  namespace: networking-policy-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-secure
  template:
    metadata:
      labels:
        app: app-secure
        role: trusted
    spec:
      containers:
      - name: web-static
        image: ribun/web-static:v3.0.0
        ports:
        - containerPort: 80
