network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-trusted
spec:
  podSelector:
    matchLabels:
      app: app-securea
  ingress:
  - from: 
    - podSelector:
        matchLabels:
          role: trusted
